create simple server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "full-stack application for adding books to a reading list and marking them as read",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
